--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <title>Bank app</title>
+    <title>Bank app
+    </title>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
@@ -113,7 +114,7 @@
 
       <!-- OPERATION: CLOSE -->
       <div class="operation operation--close">
-        <h2>Close account</h2>
+        <h2>Delete account</h2>
         <form class="form form--close">
           <input type="text" class="form__input form__input--user" />
           <input
